--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,16 @@ add_executable(${PROJECT_NAME}
         Source/Components/Drawing/RectComponent.h
         Source/Actors/Mushroom.cpp
         Source/Actors/Mushroom.h
+        Source/Actors/Chaser.cpp
+        Source/Actors/Chaser.h
+        Source/Actors/ChaserSpawner.cpp
+        Source/Actors/ChaserSpawner.h
+        Source/Actors/Missile.cpp
+        Source/Actors/Missile.h
+        Source/Actors/Walker.cpp
+        Source/Actors/Walker.h
+        Source/Actors/WalkerSpawner.cpp
+        Source/Actors/WalkerSpawner.h
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${GLEW_ROOT}/include ${SDL2_INCLUDE_DIRS})
