win screen and condition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,8 @@ add_executable(${PROJECT_NAME}
         Source/UI/Screens/MainMenu.h
         Source/UI/Screens/GameOver.cpp
         Source/UI/Screens/GameOver.h
+        Source/UI/Screens/Win.cpp
+        Source/UI/Screens/Win.h
         Source/UI/Screens/PauseMenu.cpp
         Source/UI/Screens/PauseMenu.h
         Source/UI/Screens/CrossFadeScreen.cpp
